[build-system]
requires = ['hatchling', "hatch-vcs>=0.3.0"]
build-backend = 'hatchling.build'

[project]
name = "bentoml-unsloth"
dynamic = ["version"]
description = "BentoML: The easiest way to serve AI apps and models"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
  "BentoML",
  "Compound AI Systems",
  "MLOps",
  "LLMOps",
  "Model Serving",
  "Model Inference",
  "Model Deployment",
]
authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
license = { text = "Apache-2.0" }
dependencies = [
  "bentoml>=1.3.4",
  "fastapi>=0.114.0",
  "pyyaml>=6.0.2",
  "unsloth[huggingface]>=2024.9",
  "vllm>=0.6.0",
]
[project.urls]
Homepage = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/bentoml"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/BentoML/issues"
Slack = "https://l.bentoml.com/join-slack"
Blog = "https://bentoml.com/blog"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
[tool.hatch.build.hooks.vcs]
version-file = "src/_bentoml_impl/frameworks/unsloth/_version.py"
[tool.hatch.version.raw-options]
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--first-parent",
]
version_scheme = "post-release"
fallback_version = "0.0.0"
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.sdist]
only-include = ["src/_bentoml_impl"]
[tool.hatch.build.targets.wheel]
packages = ["src/_bentoml_impl"]
